--- a/Sep25/Sep25.csproj
+++ b/Sep25/Sep25.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Sep26\Sep26.csproj" />
+  </ItemGroup>
+
 </Project>
